--- a/app/src/main/res/layout/registro_login.xml
+++ b/app/src/main/res/layout/registro_login.xml
@@ -1,80 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registro.Login">
+    android:id="@+id/main"
+    tools:context=".Registro.Login"
+    android:background="@color/backGround">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:padding="10dp"
-        android:orientation="vertical">
+    <ImageView
+        android:id="@+id/background_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/brain"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="412dp"
+        android:layout_height="475dp"
+        android:background="@drawable/rounded_edge"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
 
         <TextView
-            android:text="@string/IniciarSesion"
-            android:layout_width="match_parent"
+            android:id="@+id/textView2"
+            android:layout_width="355dp"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:gravity="center"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp"
+            android:text="@string/users_login"
+            android:textColor="@color/black" />
 
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
 
             <EditText
                 android:id="@+id/CorreoLog"
                 android:hint="@string/CorreoLog"
-                android:layout_width="match_parent"
+                android:layout_width="355dp"
                 android:layout_height="wrap_content"
-                android:drawablePadding="10dp"
-                android:padding="20dp"
+                android:layout_gravity="center_horizontal"
+                android:backgroundTint="@android:color/black"
+                android:drawableRight="@drawable/baseline_account_circle_24"
+                android:ems="10"
+                android:text=""
+                android:textColor="@android:color/black"
                 android:inputType="textEmailAddress"/>
 
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="355dp"
             android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
-            android:layout_marginTop="15dp">
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:text="@string/users_password"
+            android:textColor="@color/black" />
 
             <EditText
                 android:id="@+id/PassLog"
                 android:hint="@string/PassLog"
-                android:layout_width="match_parent"
+                android:layout_width="355dp"
                 android:layout_height="wrap_content"
-                android:drawablePadding="10dp"
-                android:padding="20dp"
+                android:layout_gravity="center_horizontal"
+                android:backgroundTint="@android:color/black"
+                android:drawableRight="@drawable/padlock_svgrepo_com"
+                android:ems="10"
+                android:textColor="@android:color/black"
                 android:inputType="textPassword"/>
-
-
-        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/Btn_IniciarSesion"
             android:text="@string/Btn_LogIn"
-            android:layout_width="match_parent"
+            android:layout_width="241dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:backgroundTint="#2A11DB"
+            android:textColor="@color/white"
+            android:textColorHint="#FFFFFF"/>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:text="@string/Dont_have_account"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/Register"
-            android:text="@string/Register"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginTop="20dp"/>
+            android:layout_gravity="center_horizontal"
+            android:text="@string/register"
+            android:textColor="@color/backGround"
+            android:textStyle="bold"/>
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </LinearLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
