--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_personal">#E8E8E8</color>
+    <color name="backGround">#2A11DB</color>
+    <color name="gray">#cfcfcf</color>
 </resources>
