--- a/app/src/main/res/layout/administrador_lista_materias.xml
+++ b/app/src/main/res/layout/administrador_lista_materias.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Administrador.ListaMateria">
 
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarMateria"
         android:layout_width="match_parent"
@@ -20,16 +21,25 @@
         app:title="">
         <ImageButton
             android:id="@+id/btn_cerrar_sesion"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/drawing_2"
             android:contentDescription="@string/back_button_description"
-            style="?android:attr/borderlessButtonStyle"
-            android:onClick="onBackPressed" />
+            android:onClick="onBackPressed"
+            android:src="@drawable/drawing_2" />
     </androidx.appcompat.widget.Toolbar>
 
-
-
+    <Spinner
+        android:id="@+id/spinnerMaterias"
+        android:layout_width="267dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.756"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewMaterias"
         android:layout_width="343dp"
@@ -57,4 +67,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.91" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
